objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Aquatic_Products__c</fullName>
        <description>Aquatic products</description>
        <label>Aquatic Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aquatics Learn to Swim</fullName>
                </value>
                <value>
                    <fullName>Aquatics Other</fullName>
                </value>
                <value>
                    <fullName>Water Safety Instructor</fullName>
                </value>
                <value>
                    <fullName>Basic Water Rescue</fullName>
                </value>
                <value>
                    <fullName>Water Safety Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aquatic_Training_Types__c</fullName>
        <description>Aquatic training types.</description>
        <label>Aquatic Training Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Water Parks</fullName>
                </value>
                <value>
                    <fullName>Parks &amp; Rec</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>College/University</fullName>
                </value>
                <value>
                    <fullName>Fitness Club</fullName>
                </value>
                <value>
                    <fullName>Hotels, Resorts, Motels, Associations</fullName>
                </value>
                <value>
                    <fullName>YMCA</fullName>
                </value>
                <value>
                    <fullName>Boys and Girls Club</fullName>
                </value>
                <value>
                    <fullName>Other social support organization</fullName>
                </value>
                <value>
                    <fullName>Camps</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>The individual has confirmed they have the Authority for purchase.</description>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BANT_Description__c</fullName>
        <description>This is a Description field to capture any additional information that goes beyond the limited options in the picklist fields under Budget, Authority, Need and purchase Timeline.</description>
        <label>BANT Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BANT_Score__c</fullName>
        <formula>IF( Ispickval(Budget__c, &quot;Yes&quot;), 0.25, 0) +  IF( Ispickval(Authority__c, &quot;Yes&quot;), 0.25, 0)  + IF( Ispickval(Need__c, &quot;Yes&quot;), 0.25, 0) +
IF(Ispickval( Timeline__c, &quot;3 Months&quot;), 0.25, If(Ispickval( Timeline__c,  &quot;6 Months&quot;), 0.20, If(Ispickval( Timeline__c, &quot;9 Months&quot;), 0.15, If(Ispickval( Timeline__c, &quot;1 Year&quot;), 0.10, If(Ispickval( Timeline__c, &quot;2 Years&quot;), 0.05, If(Ispickval( Timeline__c, &quot;3 Years&quot;), 0.00, 0.00 ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BANT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BGST_Activity_Type__c</fullName>
        <label>BGST Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FS</fullName>
                    <default>true</default>
                    <label>FS</label>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>LTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Employee_Count__c</fullName>
        <inlineHelpText>Number employed by this company</inlineHelpText>
        <label>BGST Employee Count</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-25</fullName>
                </value>
                <value>
                    <fullName>26-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Industry__c</fullName>
        <description>Industry categories for BGST sales.</description>
        <label>BGST Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Other Services, except Public Administration</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Lead_Source__c</fullName>
        <description>Lead Source menu for BGST profile.</description>
        <label>Lead Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>TSC Transfer</fullName>
                </value>
                <value>
                    <fullName>Voice Mail</fullName>
                </value>
                <value>
                    <fullName>After-Hours Transfer Lead Form</fullName>
                </value>
                <value>
                    <fullName>Referral/Repeat Business</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Transfer to Field</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Rating__c</fullName>
        <description>Rating field for BGST profile.</description>
        <label>BGST Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>The individual has confirmed they have the Budget for purchase.</description>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_SCC_Sync_Status__c</fullName>
        <defaultValue>&quot;Created&quot;</defaultValue>
        <description>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</description>
        <label>Contact SCC Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Synchronised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&apos;s unique record identifier. This field should be deleted after all migration activities are complete.</description>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <description>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</description>
        <inlineHelpText>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</inlineHelpText>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(  ISPICKVAL(  Status  , &quot;Open&quot;)  ,  ROUND( NOW()-CreatedDate, 0 ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Open Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Enrollees__c</fullName>
        <label>Estimated Annual Enrollees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-75</fullName>
                </value>
                <value>
                    <fullName>76-500</fullName>
                </value>
                <value>
                    <fullName>501-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Phone extension for business numbers</description>
        <label>Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_List_ID__c</fullName>
        <description>For control / cross reference to externally purchased lists.</description>
        <label>External List ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keycode__c</fullName>
        <description>created for April 2015 Direct Marketing campaign run out of Business Operations. intended to capture 3 character code on Postcards and Letters.</description>
        <inlineHelpText>If caller received a postcard or letter, ask for Keycode listed toward bottom of mailer.  If caller received a mailer but can&apos;t retrieve the Keycode, please enter &apos;123&apos; here.</inlineHelpText>
        <label>Keycode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Based_Training__c</fullName>
        <label>Land Based Training</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <description>The Landing Page on RCO where the Lead information was created</description>
        <label>Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>NOW()-CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Title_Score__c</fullName>
        <label>Lead Title Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>he individual identifies a specific NEED for your product or service.</description>
        <label>Need</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_ongoing_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead checks and if true will help assign to AP sales queue</description>
        <label>Need ongoing Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Opportunity_Detail__c</fullName>
        <inlineHelpText>Detailed reason if no opportunity is created.</inlineHelpText>
        <label>No Opportunity Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>No_Opportunity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>ARC Community</fullName>
                </value>
                <value>
                    <fullName>ARC Full Service</fullName>
                </value>
                <value>
                    <fullName>Competitor Full Service</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Wrong Email</fullName>
                </value>
                <value>
                    <fullName>Wrong Phone Number</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
                <value>
                    <fullName>NAN</fullName>
                </value>
                <value>
                    <fullName>AP - BGST</fullName>
                </value>
                <value>
                    <fullName>AP - Field</fullName>
                </value>
                <value>
                    <fullName>RCO Website</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Group Size</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Other</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Price</fullName>
                </value>
                <value>
                    <fullName>Competitor AP</fullName>
                </value>
                <value>
                    <fullName>FO Other</fullName>
                </value>
                <value>
                    <fullName>Field Non BGST Class</fullName>
                </value>
                <value>
                    <fullName>Demo/No Fee Class</fullName>
                </value>
                <value>
                    <fullName>Pending Agreement/Proposal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Opportunity__c</fullName>
        <inlineHelpText>Reason if no opportunity is created.</inlineHelpText>
        <label>No Opportunity Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recently Certified</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Not Reached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Training_Locations__c</fullName>
        <description>The number of training locations</description>
        <label>Number of Training Locations</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_to_Train__c</fullName>
        <description>used on Lead form to help identify which Sales channel a lead will go into.</description>
        <label>Number to Train</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-6</fullName>
                </value>
                <value>
                    <fullName>7-50</fullName>
                </value>
                <value>
                    <fullName>over 50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Course_Product__c</fullName>
        <inlineHelpText>If primary product selected is other, please specify course name.</inlineHelpText>
        <label>Other Course / Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <description>This list of options is a high level view of ARC Producs by category. Choose one or more categories that applies to the customers interest.</description>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Aquatics Learn to Swim</fullName>
                </value>
                <value>
                    <fullName>Aquatics Other</fullName>
                </value>
                <value>
                    <fullName>Babysitting</fullName>
                </value>
                <value>
                    <fullName>Basic Water Rescue</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>Citizen CPR</fullName>
                </value>
                <value>
                    <fullName>Continuing Education Units</fullName>
                </value>
                <value>
                    <fullName>CPR for the Professional Rescuer</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Response</fullName>
                </value>
                <value>
                    <fullName>Emergency Preparedness</fullName>
                </value>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>First Aid/CPR/AED Training</fullName>
                </value>
                <value>
                    <fullName>First Aid Emergency Drills</fullName>
                </value>
                <value>
                    <fullName>Lifeguarding</fullName>
                </value>
                <value>
                    <fullName>Lifeline</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>OSHA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ready Rating</fullName>
                </value>
                <value>
                    <fullName>Safety Training for Swim Coaches</fullName>
                </value>
                <value>
                    <fullName>Training Supplies</fullName>
                </value>
                <value>
                    <fullName>Water Safety Instructor</fullName>
                </value>
                <value>
                    <fullName>Water Safety Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>After choosing from the Product multi picklist, provide any additional information regarding the clients interest in a particular category.</description>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recert_Date__c</fullName>
        <label>Recert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field allows tracking of the leads that get sent from cases to the PHSS Field Staff</description>
        <label>Referral Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SABA_LMS_code__c</fullName>
        <label>SABA\LMS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Captures URL of Web Leads from RCO</description>
        <inlineHelpText>Captures URL of Web Leads from RCO</inlineHelpText>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <description>IP address of web leads submitted through RCO</description>
        <inlineHelpText>IP address of web leads submitted through RCO</inlineHelpText>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <description>The individual has confirmed they have the Timeframe for purchase.</description>
        <label>Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>this fields can be used to identify web to case form types</description>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>LTP</fullName>
                </value>
                <value>
                    <fullName>Aquatics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training My Own Employees</fullName>
                </value>
                <value>
                    <fullName>Training Companies/Individuals in My Community</fullName>
                </value>
                <value>
                    <fullName>Having Red Cross Train at My Facility</fullName>
                </value>
                <value>
                    <fullName>Sending Students to Red Cross for Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <description>Unbounce page version (variant)</description>
        <inlineHelpText>Unbounce page version (variant)</inlineHelpText>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <description>Date RCO web lead submitted from Unbounce landing page</description>
        <inlineHelpText>Date RCO web lead submitted from Unbounce landing page</inlineHelpText>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <description>Time RCO web lead submitted from Unbounce landing page</description>
        <inlineHelpText>Time RCO web lead submitted from Unbounce landing page</inlineHelpText>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Based_Training__c</fullName>
        <label>Water Based Training</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Correct_Format_for_the_Phone_Number</fullName>
        <active>false</active>
        <description>The phone number should be in the correct format</description>
        <errorConditionFormula>NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter the phone number in the correct format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Contact_Info</fullName>
        <active>true</active>
        <description>For BGST, require one piece of contact information to create a Lead.</description>
        <errorConditionFormula>AND( 
CONTAINS(Owner_Profile__c, &quot;ARC BGST&quot;),
(ISBLANK( Email )),
(ISBLANK( Phone )),
(ISBLANK( MobilePhone ))
)</errorConditionFormula>
        <errorMessage>A phone number, mobile phone number, or email address is required to create a Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Course</fullName>
        <active>true</active>
        <description>If primary product other selected, require user to enter information in other course field.</description>
        <errorConditionFormula>AND
(  

ISPICKVAL(Primary_Product__c, &quot;Other&quot;),  



ISBLANK( Other_Course_Product__c ) 

)</errorConditionFormula>
        <errorDisplayField>Other_Course_Product__c</errorDisplayField>
        <errorMessage>Please enter course/product name.</errorMessage>
    </validationRules>
</CustomObject>